# renovate

./: .ghc.environment.x86_64-linux-8.10.2  .ghc.environment.x86_64-linux-8.10.3  .ghc.environment.x86_64-linux-8.4.3  .ghc.environment.x86_64-linux-8.4.4  .ghc.environment.x86_64-linux-8.6.4  .ghc.environment.x86_64-linux-8.6.5  .ghc.environment.x86_64-linux-8.8.3  .gitignore  .gitmodules  ChangeLog.md  README.rst  cabal.project  cabal.project.dist  cabal.project.freeze.ghc-8.10.7  cabal.project.freeze.ghc-8.8.4  cabal.project.freeze.ghc-9.0.2  cabal.project.freeze.ghc-9.2.3  cabal.project.local~  elf-update-notes.org  renovate.cabal  stack-8.2.2.yaml
.github/workflows/: ci-matrix.yml
refurbish/: ChangeLog.md  Dockerfile  README.md  refurbish.cabal
refurbish/src/: Main.hs
refurbish/src/Refurbish/: Docker.hs  QEMU.hs  Tutorial.hs
refurbish/tests/: ELF.hs  Identity.hs  Inject.hs  Main.hs  README.org  doctests.hs
refurbish/tests/binaries/: .swp  Dockerfile  Makefile  float_min.c  fork.c.disabled  linked-list.c  test-conditional.c  test-direct-calls.c  test-fp.c  test-indirect-call.c  test-indirect-calls.c  test-just-exit.c  test-reporting.c  test-tail-call.c  util.h  wc.c  wc.x86_64.args
refurbish/tests/injection-base/: Makefile  injection-base.c  ppc64-exit.s  x86-exit.s
refurbish/tools/refurbish/: Main.hs
refurbish/tools/refurbish-run/: Main.hs
renovate/: LICENSE  renovate.cabal
renovate-aarch32/: CHANGELOG.md  renovate-aarch32.cabal
renovate-aarch32/src/Renovate/Arch/: AArch32.hs
renovate-aarch32/src/Renovate/Arch/AArch32/: ABI.hs  ISA.hs  Panic.hs  Repr.hs
renovate-ppc/: ChangeLog.md  renovate-ppc.cabal
renovate-ppc/src/Renovate/Arch/: PPC.hs
renovate-ppc/src/Renovate/Arch/PPC/: ABI.hs  ISA.hs  Panic.hs
renovate-x86/: ChangeLog.md  renovate-x86.cabal
renovate-x86/src/Renovate/Arch/: X86_64.hs
renovate-x86/src/Renovate/Arch/X86_64/: ABI.hs  ISA.hs  Internal.hs  Panic.hs
renovate-x86/tests/: Main.hs  X64.hs
renovate-x86/tests/x64/: test2.s.expected  test3.s  test3.s.expected
renovate/examples/: AnalysisExample.hs  RewritingExample.hs
renovate/src/: Renovate.hs
renovate/src/Renovate/: ABI.hs  Address.hs  Arch.hs  Assemble.hs  BasicBlock.hs  Config.hs  Diagnostic.hs  ISA.hs  Metrics.hs  Panic.hs  Recovery.hs  Redirect.hs  Rewrite.hs  Tutorial.hs
renovate/src/Renovate/Analysis/: FunctionRecovery.hs
renovate/src/Renovate/BasicBlock/: Assemble.hs  Types.hs
renovate/src/Renovate/BinaryFormat/: ELF.hs
renovate/src/Renovate/BinaryFormat/ELF/: BSS.hs  Common.hs  Exceptions.hs  InitialSizes.hs  Internal.hs  Rewriter.hs
renovate/src/Renovate/BinaryFormat/ELF/Common/: Internal.hs
renovate/src/Renovate/BinaryFormat/ELF/Rewriter/: Env.hs
renovate/src/Renovate/Core/: Address.hs  BasicBlock.hs  Chunk.hs  Diagnostic.hs  Exception.hs  Instruction.hs  Layout.hs  Relocation.hs
renovate/src/Renovate/Recovery/: Monad.hs  Overlap.hs  SymbolMap.hs
renovate/src/Renovate/Redirect/: Concretize.hs  Internal.hs  LayoutBlocks.hs  Monad.hs  ReifyFallthrough.hs  Symbolize.hs
renovate/src/Renovate/Redirect/LayoutBlocks/: Compact.hs  SuccessorMap.hs  Types.hs
renovate/tests/: Main.hs
renovate/utils/: run-discovery.hs
scripts/: regenerate-freeze-files.sh
scripts/jenkins/: build-and-test.sh
src/: Renovate.hs
src/Renovate/: ABI.hs  Address.hs  BasicBlock.hs  Config.hs  Diagnostic.hs  ELF.hs  ISA.hs  Instrument.hs  Recovery.hs  Redirect.hs  Rewrite.hs
src/Renovate/Analysis/: FunctionRecovery.hs  Overflow.hs
src/Renovate/Arch/: X86_64.hs
src/Renovate/Arch/X86_64/: ABI.hs  ISA.hs  Internal.hs  Overflow.hs
src/Renovate/BasicBlock/: Assemble.hs  Types.hs
src/Renovate/BinaryFormat/: ELF.hs
src/Renovate/Config/: Internal.hs
src/Renovate/ELF/: Internal.hs
src/Renovate/Instrument/: ABICleanup.hs  Monad.hs  ShadowStack.hs  TrapArithOverflows.hs
src/Renovate/Recovery/: Monad.hs
src/Renovate/Redirect/: Concretize.hs  Internal.hs  LayoutBlocks.hs  Monad.hs  Symbolize.hs
src/Renovate/Redirect/LayoutBlocks/: Compact.hs  Parallel.hs  Types.hs
tests/: X64.hs
tests/x64/: test1.s.expected
