cabal-version:       2.2
name:                renovate-aarch32
version:             0.1.0.0
synopsis:            A renovate (binary rewriter) backend for 32-bit ARM
description:         Library providing the ability to modify 32-bit ARM
                     binaries without needing the source.
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@galois.com
-- copyright:
category:            Disassembler
build-type:          Simple
extra-source-files:  CHANGELOG.md

common bldflags
  default-language:    Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Werror=incomplete-patterns
               -Werror=missing-methods
               -Werror=overlapping-patterns
               -Wpartial-fields
               -fno-ignore-asserts
               -fhide-source-paths

library
  import: bldflags
  exposed-modules:     Renovate.Arch.AArch32
  other-modules:       Renovate.Arch.AArch32.ABI
                       Renovate.Arch.AArch32.ISA
                       Renovate.Arch.AArch32.Panic
                       Renovate.Arch.AArch32.Repr
  -- other-extensions:
  build-depends:       base >=4.10 && <5,
                       bytestring,
                       dismantle-arm-xml,
                       dismantle-tablegen,
                       exceptions >= 0.10 && < 0.11,
                       macaw-aarch32,
                       macaw-aarch32-symbolic,
                       macaw-base,
                       macaw-loader,
                       macaw-loader-aarch32,
                       panic >= 0.4 && < 0.5,
                       parameterized-utils >= 2.1 && < 2.2,
                       prettyprinter >= 1.7 && < 1.8,
                       renovate,
                       semmc-aarch32
  hs-source-dirs:      src
