cabal-version:       2.2
name:                renovate-ppc
version:             0.1.0.0
synopsis:            A renovate (binary rewriter) backend for PowerPC
description:         Library providing the ability to modify PowerPC (ppc)
                     binaries without needing the source.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@galois.com
-- copyright:           
category:            Disassembler
build-type:          Simple
extra-source-files:  ChangeLog.md

common bldflags
  default-language:    Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Werror=incomplete-patterns
               -Werror=missing-methods
               -Werror=overlapping-patterns
               -Wpartial-fields
               -fno-ignore-asserts
               -fhide-source-paths

library
  import: bldflags
  exposed-modules:     Renovate.Arch.PPC
  other-modules:       Renovate.Arch.PPC.ISA
                       Renovate.Arch.PPC.ABI
                       Renovate.Arch.PPC.Panic
  -- other-extensions:    
  build-depends:       base >=4.10 && <5,
                       bytestring,
                       dismantle-ppc,
                       exceptions >= 0.10 && < 0.11,
                       macaw-base,
                       macaw-loader,
                       macaw-loader-ppc,
                       macaw-ppc,
                       macaw-ppc-symbolic,
                       panic >= 0.4 && < 0.5,
                       parameterized-utils >= 2.1 && < 2.2,
                       prettyprinter >= 1.7 && < 1.8,
                       renovate
  hs-source-dirs:      src
