cabal-version:       2.2
name:                renovate-x86
version:             0.1.0.0
synopsis:            A renovate (binary rewriting) backend for x86_64
description:         Library providing the ability to modify x86_64
                     binaries without needing the source.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@galois.com
-- copyright:           
category:            Disassembler
build-type:          Simple
extra-source-files:  ChangeLog.md

common bldflags
  default-language:    Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Werror=incomplete-patterns
               -Werror=missing-methods
               -Werror=overlapping-patterns
               -Wpartial-fields
               -fno-ignore-asserts
               -fhide-source-paths

library
  import: bldflags
  exposed-modules:     Renovate.Arch.X86_64
  other-modules:       Renovate.Arch.X86_64.ABI
                       Renovate.Arch.X86_64.ISA
                       Renovate.Arch.X86_64.Internal
                       Renovate.Arch.X86_64.Panic
  -- other-extensions:    
  build-depends:       base >=4.10 && <5,
                       bytestring,
                       exceptions >= 0.10 && < 0.11,
                       flexdis86 >=0.1.4,
                       located-base >= 0.1 && < 0.2,
                       macaw-x86,
                       macaw-base,
                       panic >= 0.4 && < 0.5,
                       parameterized-utils > 2.0 && < 2.2,
                       prettyprinter >= 1.7.0 && < 1.8,
                       prettyprinter-ansi-terminal >= 1.1 && < 1.2,
                       prettyprinter-convert-ansi-wl-pprint >= 1.1 && < 1.2,
                       renovate
  hs-source-dirs:      src

test-suite renovate-x86-tests
  import: bldflags
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: X64
  hs-source-dirs: tests
  build-depends: base,
                 bytestring,
                 containers,
                 crucible,
                 elf-edit >= 0.40 && < 0.50,
                 filemanip >= 0.3.6 && < 0.4,
                 filepath >= 1.4 && < 1.5,
                 lumberjack >= 1.0 && < 1.1,
                 macaw-base,
                 macaw-loader,
                 macaw-loader-x86,
                 macaw-symbolic,
                 macaw-x86-symbolic,
                 parameterized-utils,
                 prettyprinter,
                 renovate,
                 renovate-x86,
                 tasty >= 0.10 && < 2,
                 tasty-hunit >= 0.10 && < 0.11
