cabal-version:       2.2
name:                renovate
version:             0.1.0.0
synopsis:            An interface for binary analysis and rewriting
description:         Provides a set of tools for analyzing and rewriting
                     binaries for various CPU architectures, including:
                     * x86_64 (Intel)
                     * ppc (PowerPC)
                     * aarch32 (ARM)
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@galois.com
-- copyright:           
category:            Disassembler
build-type:          Simple
extra-source-files:  ChangeLog.md

common bldflags
  default-language:    Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Werror=incomplete-patterns
               -Werror=missing-methods
               -Werror=overlapping-patterns
               -Wpartial-fields
               -fno-ignore-asserts
               -fhide-source-paths

library
  import: bldflags
  exposed-modules:     Renovate
                       Renovate.BinaryFormat.ELF.Internal
                       Renovate.BinaryFormat.ELF.Common.Internal
  other-modules:
                       Renovate.Arch
                       Renovate.Assemble
                       Renovate.Analysis.FunctionRecovery
                       Renovate.ABI
                       Renovate.Config
                       Renovate.Core.Address
                       Renovate.Core.BasicBlock
                       Renovate.Core.Chunk
                       Renovate.Core.Diagnostic
                       Renovate.Core.Exception
                       Renovate.Core.Instruction
                       Renovate.Core.Layout
                       Renovate.Core.Relocation
                       Renovate.Metrics
                       Renovate.Redirect
                       Renovate.Redirect.Concretize
                       Renovate.Redirect.Internal
                       Renovate.Redirect.LayoutBlocks
                       Renovate.Redirect.Monad
                       Renovate.Redirect.ReifyFallthrough
                       Renovate.Redirect.Symbolize
                       Renovate.Rewrite
                       Renovate.BinaryFormat.ELF
                       Renovate.BinaryFormat.ELF.Common
                       Renovate.BinaryFormat.ELF.BSS
                       Renovate.BinaryFormat.ELF.InitialSizes
                       Renovate.BinaryFormat.ELF.Rewriter
                       Renovate.ISA
                       Renovate.Panic
                       Renovate.Recovery
                       Renovate.Recovery.Overlap
                       Renovate.Recovery.SymbolMap
  -- other-extensions:    
  build-depends:       base >=4.10 && <5,
                       binary >= 0.8 && < 0.9,
                       bytestring >= 0.9 && < 0.12,
                       containers >= 0.5 && < 0.7,
                       crucible,
                       crucible-llvm,
                       elf-edit >= 0.28,
                       exceptions >= 0.7 && < 0.11,
                       generic-lens >= 0.5 && < 2.3,
                       heaps >= 0.3 && < 0.5,
                       IntervalMap >= 0.6 && < 0.7,
                       lens >= 4 && < 6,
                       lumberjack >= 0.1 && < 1.1,
                       mtl >= 2.2 && < 2.4,
                       mwc-random >= 0.13.6.0 && < 0.15,
                       macaw-base >= 0.3.2,
                       macaw-loader,
                       macaw-refinement,
                       macaw-symbolic,
                       prettyprinter >= 1.7 && < 1.8,
                       panic >= 0.4 && < 0.5,
                       parameterized-utils >= 2.0 && < 2.2,
                       semmc,
                       text,
                       union-find >= 0.2 && < 0.3,
                       unliftio-core >= 0.2 && < 0.3,
                       vector >= 0.10 && < 0.14,
                       what4

  hs-source-dirs:      src


test-suite renovate-tests
  import: bldflags
  type: exitcode-stdio-1.0
  ghc-options: -Wall -rtsopts -threaded
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base,
                 elf-edit,
                 QuickCheck >= 2.10 && < 2.15,
                 renovate,
                 tasty >= 1.4 && < 1.5,
                 tasty-hunit >= 0.10 && < 0.11,
                 tasty-quickcheck >= 0.10 && < 0.11
